--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <option value="Generosity">Generosity</option>
                 <option value="Perceptions of corruption">Perceptions of Corruption</option>
                 <option value="EPI.new">EPI Score</option>
-                <option value="HLT.new">Health Score</option>
+                <option value="HLT.new">Environmental Health</option>
                 <option value="AIR.new">Air Quality Score</option>
                 <option value="H2O.new">Water Quality Score</option>
                 <option value="COE.new">CO2 Emissions Score</option>
